crates/oomtop-tui/tests/snapshots/render__throttle_160_16.snap
---
source: crates/oomtop-tui/tests/render.rs
expression: styled(&buf)
---
  E0[|||||||                      21.5%]  E3[|                             2.0%]  P6[||||||||||||||               42.4%]  P9[||||                         11.8%]
.aaabcccccccddddddddddddddddddddddaaaaab.aaabcdddddddddddddddddddddddddddddaaaab.aaabccccccccccccccdddddddddddddddaaaaab.aaabccccdddddddddddddddddddddddddaaaaab
  E1[|||||                        16.0%]  E4[                              1.3%]  P7[|||||||||||||||||||||||||||  78.0%]
.aaabcccccddddddddddddddddddddddddaaaaab.aaabddddddddddddddddddddddddddddddaaaab.aaabeeeeeeeeeeeeeeeeeeeeeeeeeeeddaaaaab
  E2[||                            6.7%]  E5[                              0.7%]  P8[|||||||||||||||||||||||||||||93.1%]
.aaabccddddddddddddddddddddddddddddaaaab.aaabddddddddddddddddddddddddddddddaaaab.aaabfffffffffffffffffffffffffffffaaaaab
 Mem[|||||||||||||||||||##############################*****=========20.5G/24.0G]  Tasks: 761, 3412 thr; 3 running
.aaab...................bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbdddddgggggggggaaaaaaaaaaab..aaaaaaabbbaabbbbaaaaaabaaaaaaaa
 Swp[                                                                   0B/7.0G]  Load average: 3.20 2.74 2.41
.aaabdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddaaaaaaab..aaaaaaaaaaaaaabbbb
 GPU[|||||||||||||||||||||||||||||||||||||||||||                          58.0%]  Uptime: 58 days, 11:23:04
.aaabcccccccccccccccccccccccccccccccccccccccccccddddddddddddddddddddddddddaaaaab..aaaaaaaabbbbbbbbbbbbbbbbb
 Running at 45% speed — thermal pressure heavy, on battery (29%). Plug in or pause heavy work.
.hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
 GPU 58%  4.1 W  9.9G of budget 16.0G     package 11.8 W   P-cluster 3100/4400 MHz
aaaaa..........bbbbbbbbbbbbbbbbbbbbbb
 MEM |apps 6.0G #gpu/metal 9.9G *compressed 1.6G =wired 3.0G .cache 3.8G free 9.0G avail 14.0G
aaaa..aaaaa.....baaaaaaaaaa.....daaaaaaaaaaa.....gaaaaaa.....aaaaaaa.....aaaaa.....aaaaaa
 SWAP 0B / 7.0G  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  ● -60.0M/min  forecast stable   headroom 1.2G
aaaaaaiiiiiiiii............ccccccccccccccaaaaaaaaaaaaaaaaa
 oomtop  [1 Home] 2 Processes 3 Models 4 Sandboxes 5 Reclaim 6 Timeline                  mode throttle  ● Normal  45% speed  ■ hot  bat 29%  2 sources limited
bbbbbbbb.bbbbbbbb.bbbbbbbbbbb.bbbbbbbb.bbbbbbbbbbb.bbbbbbbbb.bbbbbbbbbb..................aaaaaaaaaaaaa..cccccccc..eeeeeeeee..fffff...........aaaaaaaaaaaaaaaaa
─ Your things ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
ddaaaaaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
 sd-server · qwen-image-studio  9.9G  idle    Claude Code ×4  1.4G

─ Ranked ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── / filter · : command · i why ─
ddaaaaaaaddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 ▸ sd-server · qwen-image-studio (2)                 model                      9.9G  ⣦⣰⣤⣰⣄⣦⣼⣦⣰⣦⣷⣼    85%                 because: holds 41% of RAM
jjjkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkklllllllllllllllllllllllmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmlllllllllllllllllllllllllllllllllllllllllllllllllllllll
   Google Chrome (14)                                app                        2.9G  ⣄⣦⣄⣦⣰⣤⣷⣄⣶⣼⣦⣷     6%                 because: holds 12% of RAM
bbb.................................................aaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   Claude Code · 3f2a (2)                            agent                      350M  ⣰⣄⣶⣄⣦⣴⣦⣷⣤⣷⣼⣶     4%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   clang                                             other                      120M  ⣦⣰⣤⣰⣄⣦⣼⣦⣰⣦⣷⣼    30%
bbb.................................................aaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   Claude desktop VM                                 sandbox                   ≥1.5G  ⣰⣤⣰⣄⣦⣼⣦⣰⣦⣷⣼⣶     2%  sandbox        because: sandbox · started by Claude
bbbiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiaaaaaaaaaaaaaaaaaaaaaaa..............................iiiiiiiiiiiiiiiaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   ChatGPT / Codex (6)                               app                        1.0G  ⣦⣄⣦⣰⣤⣷⣄⣶⣼⣦⣷⣦     2%
bbb.................................................aaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   Claude                                            app                        420M  ⣤⣰⣄⣦⣼⣦⣰⣦⣷⣼⣶⣼     1%
bbb.................................................aaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   Claude Code · d4e5 (2)                            agent                      383M  ⣰⣄⣦⣼⣦⣰⣦⣷⣼⣶⣼⣦     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   Claude Code · a90b (2)                            agent                      372M  ⣦⣰⣄⣶⣄⣦⣴⣦⣷⣤⣷⣼     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   WindowServer                                      system                     410M  ⣄⣦⣰⣤⣷⣄⣶⣼⣦⣷⣦⣷     6%  protected
bbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   Claude Code · 7c11 (2)                            agent                      361M  ⣄⣦⣰⣦⣰⣤⣶⣼⣦⣼⣦⣷     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   oomtop (this)                                     other                     22.0M  ⣄⣦⣄⣦⣰⣤⣷⣄⣶⣼⣦⣷     1%  this
bbb.................................................aaaaaaaaaaaaaaaaaaaaaaa..............................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa




─ Details ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
ddaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
 sd-server · qwen-image-studio → sd-server (9.7G) · python3 (180M)

 model_server · 2 processes · grouped by builtin:model (high confidence) · root pid 4242
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 footprint 9.9G (Σ footprint, exact) · resident 1.2G · gpu n/a (inside footprint) · swapped n/a (not attributable per process) · reclaim ≈4.1G · swap freed ≈2.…

 history ⣤⣰⣄⣦⣴⣦⣰⣤⣶⣼⣦⣴⣦⣷⣾ min 7.0G max 9.9G over 30 samples

 because: holds 41% of RAM
aaaaaaaaaaaaaaaaaaaaaaaaaa
 [x] stop   [z] suspend   [p] pin   [m] mute   [w] watch   [c] compare   [i] why ranked here
.bbb........bbb...........bbb.......bbb........bbb.........bbb...........bbb
F1Help   F2Setup  F3Search F4Filter F5Tree   F6SortBy F7Why    F8Reclaim F9Stop   F10Quit
..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmmm..mmmmmmm...mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
--- legend
a = dim
b = bold
c = fg:Green
d = fg:DarkGray
e = fg:Yellow
f = fg:Red bold
g = dim italic
h = fg:Yellow bold
i = italic
j = bold reverse
k = bold italic reverse
l = dim reverse
m = reverse
